Fix: Css changes

--- a/client/src/components/Pages/Blogs/Blog.css
+++ b/client/src/components/Pages/Blogs/Blog.css
@@ -42,3 +42,15 @@
     align-items: center;
     justify-content: space-between;
   }
+  .post-btn{
+    width: fit-content;
+    background-color: black;
+    border: 5px solid black;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: bolder;
+    cursor: pointer;    
+    padding: 10px;
+    text-decoration: none;
+    transition: .3s;
+  }
