--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
-/* .App {
-  text-align: center;
+.App {
+  /* text-align: center; */
 }
 
 .App-logo {
@@ -24,15 +24,4 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
