--- a/client/src/components/Pages/Blogs/Blog.css
+++ b/client/src/components/Pages/Blogs/Blog.css
@@ -26,7 +26,7 @@
     display: inline-block;
   }
   .blog-content {
-    font-size:1.4rem;
+    font-size:1rem;
   }
   .author {
     font-size: 1rem;
@@ -58,4 +58,82 @@
   .user-link{
     text-decoration: none;
     font-weight: 700;
+  }
+
+  .btn {
+    display: flex;
+    align-items: center;
+    background: none;
+    border: 1px solid #bdbdbd;
+    height: 48px;
+    padding: 0 24px 0 16px;
+    letter-spacing: 0.25px;
+    border-radius: 24px;
+    cursor: pointer;
+ }
+  .btn:focus {
+    outline: none;
+ }
+  .btn .mdi {
+    margin-right: 8px;
+ }
+  .btn-delete {
+    font-size: 16px;
+    color: red;
+ }
+  .btn-delete > .mdi-delete-empty {
+    display: none;
+ }
+  .btn-delete:hover {
+    background-color: #fff5f5;
+ }
+  .btn-delete:hover > .mdi-delete-empty {
+    display: block;
+ }
+  .btn-delete:hover > .mdi-delete {
+    display: none;
+ }
+  .btn-delete:focus {
+    box-shadow: 0 0 0 4px #fcc;
+ }
+  
+  .user-posted-details{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  .comment-container {
+    width: 520px;
+    margin-top: 20px;
+  }
+  .button-group {
+    margin-bottom: 20px;
+  }
+
+  .posts {
+    clear: both;
+    list-style: none;
+    padding-left: 0;
+    width: 100%;
+    text-align: left;
+  }
+  .posts li {
+    background-color: #fff;
+    border: 1.5px solid #d8d8d8;
+    border-radius: 10px;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    word-wrap: break-word;
+    min-height: 42px;
+    box-shadow:8px 8px 5px #888888;
+  }
+  .btn-primary {
+      color: #fff;
+      background-color: #337ab7;
+      border-color: #2e6da4;
   }
