--- a/client/src/components/Pages/UserProfile/UserProfile.css
+++ b/client/src/components/Pages/UserProfile/UserProfile.css
@@ -1,123 +1,362 @@
-.user-profile-container-1{
-    max-height: 100vh;
-    max-width: 1000px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0% auto;
-}
-.user-profile-container-2{
-    min-width: 1100px;
-    width: calc(100% - 164px);
+@import url("https://fonts.googleapis.com/css?family=Montserrat:600");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:800");
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
 
-    box-sizing: border-box;
-    padding: 24px;
-    display: flex;
+
+.profile {
+  animation: loadProfile 0.6s ease-in-out;
+  animation-fill-mode: both;
+  font-size: 0.9rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  max-height: 750px;
+  max-width: 900px;
+  margin-top: 120px;
+}
+
+.profile-bg {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border-radius: 10px;
+  background: white;
+  box-shadow: 0 30px 50px -20px rgba(14, 0, 47, 0.21);
+  width: calc(100% - 75px);
+  height: calc(100% - 110px);
+  z-index: -1;
+}
+
+.container-profile-inner {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  width: 100%;
+} 
+
+.profile-image {
+  animation: loadProfileImage 1s ease-in-out 0.5s;
+  animation-fill-mode: both;
+  position: relative;
+  border-radius: 10px;
+  box-shadow: 0 25px 45px -20px rgba(255, 0, 47, 0.55),
+    inset 0 0px 120px rgba(255, 0, 47, 0.75);
+  width: 45%;
+  flex: none;
+  background-image: url("https://zephyo.github.io/22Days/code/3/graphics/profile.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.profile-image::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background-color: #ff2256;
+  opacity: 0.8;
+  mix-blend-mode: screen;
+}
+
+.camera {
+  color: #FFFF;
+  position: absolute;
+  /* bottom: 28px; */
+  font-weight: 500;
+  left: 28px;
+  font-size: 8rem;
+}
+
+.profile-info {
+  /* margin-top: 120px; */
+  padding: 8% 8% 2% 8%;
+  position: relative;
+}
+
+.profile-info h1 {
+  font-size: 3rem;
+  font-weight: 800;
+  margin: 4.5rem 0;
+  position: absolute;
+  animation-fill-mode: both;
+}
+.profile-info-secondary{
+  margin: 0.5rem;
+  display: flex;
+  gap: 10px;
+  align-items:  center;
+}
+
+h1.first-name {
+  animation: titleEffect 1s cubic-bezier(0,0.2,0.4,1);
+  top: -115px;
+  left: -85px;
+} 
+
+h1.second-name {
+  animation: titleEffect 1s cubic-bezier(0,0,0.3,1);
+  top: -50px;
+  left: -45px;
+}
+
+.profile-info h2 {
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 0.2rem;
+  margin-top: 0;
+  margin-bottom: 5%;
+}
+
+.social-media-icons a,
+.profile-info h2 {
+  color: #f63d47;
+}
+
+.profile-info p {
+  line-height: 1.5rem;
+}
+
+.social-media-icons {
+  display: flex;
+}
+
+.social-media-icons a {
+  margin-top: 7%;
+  font-size: 1.2rem;
+  flex: auto;
+  text-align: center;
+}
+
+.camera,
+.social-media-icons a {
+  transition: text-shadow 0.5s ease;
+}
+
+.camera:hover,
+.social-media-icons a:hover {
+  text-shadow: 0px 5px 15px rgba(255, 0, 47, 0.45);
+}
+
+.statistics {
+  margin-right: 10px;
+  margin-left: 10px;
+  line-height: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.statistics p {
+  margin: 3%;
+  flex: auto;
+  color: #f63d47;
+}
+
+.statistics p strong {
+  font-size: 1.4rem;
+  color: #000;
+  font-weight: 200;
+  margin-right: 0.3rem;
+}
+
+.icon {
+  background: transparent no-repeat center;
+  background-size: contain;
+  background-origin: content-box;
+  width: 60px;
+  height: 60px;
+  padding: 15px;
+  border: none;
+  transition: transform 0.5s ease;
+}
+
+.icon:hover {
+  transform: scale(0.9);
+}
+
+.arrow {
+  flex: 0 1 75px;
+  background-image: url("https://zephyo.github.io/22Days/code/3/graphics/arrow.svg");
+}
+
+.right {
+  transform: rotate(180deg);
+}
+
+.right:hover {
+  transform: scale(0.9) rotate(180deg);
+}
+
+.close {
+  background-image: url("https://zephyo.github.io/22Days/code/3/graphics/close.svg");
+  position: absolute;
+  top: 5px;
+  right: 10px;
+}
+
+@media only screen and (max-aspect-ratio: 4/7) and (max-width: 600px) {
+  .profile {
+    margin: 3%;
+    height: 97%;
+  }
+  .container {
+    height: 86%;
     flex-direction: column;
-    justify-content: space-between;
-}
-.user-details-container{
+  }
+  .profile-image {
+    height: 40%;
+    width: calc(100% - 90px);
+  }
+  .profile-bg {
     width: 100%;
-    margin-top: 50px;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+  }
+  h1.first-name {
+    left: 10px;
+  }
+  h1.second-name {
+    left: 60px;
+  }
 }
 
-.user-details{
-    display: flex;
-    align-items: flex-start;
-
+@media screen and (min-aspect-ratio: 4/7) {
+  .profile {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
 }
 
-.user-name{
-    padding-left: 20px;
-    
+@keyframes backgroundAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
-.user-name p {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    color: #7e7e7e;
+
+@keyframes loadProfile {
+ from{
+    transform: translateY(100px);
+    opacity: 0;
+  }
+ to {
+     transform: translateY(0px);
+    opacity: 1;
+  }
 }
+
+@keyframes loadProfileImage {
+  from {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+ to {
+     transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes titleEffect {
+ from {
+   opacity:0;
+     transform: translateX(-75px);
+  }
+  to {
+     transform: translateX(0px);
+    opacity: 1;
+  }
+}
+
+
+.edit-btn{
+  display: inline-block;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 1rem 1.6rem;
+  border-radius: 25px;
+  color: #fff;
+  background-color: black;
+  cursor: pointer;
+}
+
+
+#about{
+  resize: none;
+  width: 18rem;
+  height: 7.5rem;
+}
+
 .edit-profile-btn{
-    padding: 8px 10px;
-    border: solid 1px #7e7e7e;
-    border-radius: 2px;
-    background-color: white;
-    cursor: pointer;
-    transition: 0.3s;
-    display: flex;
-    align-items: center;
-    gap: 5px;
+  padding: 8px 10px;
+  border: solid 1px #7e7e7e;
+  border-radius: 2px;
+  background-color: white;
+  cursor: pointer;
+  transition: 0.3s;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 .edit-profile-btn:hover{
-    background-color: #f5f9fc;
+  background-color: #f5f9fc;
 }
 .edit-profile-title{
-    padding: 20px 0px;
-    border-bottom: solid 1px #dbd9d9;
+  padding: 20px 0px;
+  border-bottom: solid 1px #dbd9d9;
 }
 .edit-profile-title-2{
-    color: grey;
-    font-weight: 400;
+  color: grey;
+  font-weight: 400;
 }
 .edit-profile-form {
-    padding: 20px;
-    border: solid 1px #dbd9d9;
-    border-radius: 5px;
+  padding: 20px;
+  border: solid 1px #dbd9d9;
+  border-radius: 5px;
 }
 .edit-profile-form label h3{
-    margin: 0%;
-    padding: 3px 0px;
+  margin: 0%;
+  padding: 3px 0px;
 }
 .edit-profile-form label p{
-    margin: 0%;
-    padding: 3px 0px;
+  margin: 0%;
+  padding: 3px 0px;
 }
 .edit-profile-form label input, .edit-profile-form label textarea{
-    padding: 5px;
-    margin-bottom: 20px;
-    border: solid 1px #dbd9d9;
-    width: 50%;
+  padding: 5px;
+  margin-bottom: 20px;
+  border: solid 1px #dbd9d9;
+  width: 50%;
 }
 .selector{
-    
-    margin-bottom: 20px;
-    
-    width: 50%;
+  
+  margin-bottom: 20px;
+  
+  width: 50%;
 }
 .user-submit-btn{
-    padding: 14px 10px;
-    background-color: #0a95ff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    transition: 0.2s;
-    cursor: pointer;
+  padding: 14px 10px;
+  background-color: #0a95ff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  transition: 0.2s;
+  cursor: pointer;
 }
 
 .user-submit-btn:hover{
-    background-color: #0074cc;
+  background-color: #0074cc;
 }
 
 .user-cancel-btn{
-    padding: 14px 10px;
-    color: #0a95ff;
-    background-color: transparent;
-    border: none;
-    margin-left: 10px;
-    cursor: pointer;
-}
-
-.location-btn{
-    
-    padding: 10px;
-    background-color: #009dff;
-    border: solid 1px #009dff;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: 0.3s;
+  padding: 14px 10px;
+  color: #0a95ff;
+  background-color: transparent;
+  border: none;
+  margin-left: 10px;
+  cursor: pointer;
 }
